@@ -19,6 +19,8 @@ Fixed Object of class ADORecordSet_mysqlt could not be converted to int in warpe
 Fixed loads of Use of undefined constant link_dest - assumed 'link_dest' in warpedit2.php
 Fixed Undefined variable: flag and flag2 in warpedit2.php
 Fixed Use of undefined constant sector - assumed 'sector' in warpedit2.php
+Fixed Undefined variable: flag in warpedit3.php
+Fixed Undefined variable: bothway in warpedit3.php
 
 TheMightyDude (22 July 2012)
 --------------------------------------
